--- a/templates/main.html
+++ b/templates/main.html
@@ -37,6 +37,8 @@
         </div>
       </a>
     </div>
+    <br>
+    <div class="centershort">The following times are an aproximation.</div>
   </div>
 
   <div class="center" id="tablelarge">
