--- a/static/style.css
+++ b/static/style.css
@@ -113,7 +113,10 @@ body{
     align-items: center;
     font-size: min(max(1.5vw, 12pt), 16pt);
     text-align: left;
-    padding: 50px;
+    padding-top: 50px;
+    padding-left: 50px;
+    padding-right: 50px;
+    padding-bottom: 10px;
     flex-direction: column;
 }
 
