--- a/static/style.css
+++ b/static/style.css
@@ -46,6 +46,7 @@ body{
     font-size: min(max(1.5vw, 8pt), 16pt);
     text-align: left;
     padding-top: 20px;
+    padding-bottom: 50px;
 }
 
 
@@ -183,4 +184,26 @@ body{
     display: block;
     max-width: 100%;
     max-height: 100%;
+}
+
+.showallcontainer {
+    display: flex;
+    justify-content: center;
+}
+
+.showall {
+    text-align: center;
+    margin: 10px;
+    border: 3px solid #FFFFFF;
+    border-radius: 15px;
+    width: fit-content;
+}
+
+.showall:hover{
+    box-shadow: 0 10px 16px 0 rgba(0,0,0,0.2),0 6px 20px 0 rgba(0,0,0,0.09);
+    cursor: pointer;
+}
+
+.showall div {
+    margin: 10px;
 }
