Autocorrect the time deviation through ASOT Twitter

--- a/templates/main.html
+++ b/templates/main.html
@@ -25,6 +25,7 @@
     </div>
     <br>
     <div style="font-size: 130%;">LISTEN LIVE</div>
+    <div class="hide" id="updatetime">{{update_time}}</div>
     <div class="current links">
       <a class="link" href="https://www.youtube.com/watch?v=5lMmnfVylEE">
         <div class="frame">
