force refresh on the js file

--- a/templates/main.html
+++ b/templates/main.html
@@ -65,5 +65,5 @@
 </body>
 
 <script src="static/data.json"></script>
-<script src="static/scripts.js"></script>
+<script src="static/scripts.js?3"></script>
 </html>
