--- a/static/style.css
+++ b/static/style.css
@@ -46,7 +46,7 @@ body{
     font-size: min(max(1.5vw, 8pt), 16pt);
     text-align: left;
     padding-top: 20px;
-    padding-bottom: 50px;
+    padding-bottom: 10px;
 }
 
 
@@ -84,7 +84,7 @@ body{
     font-weight: 800;
     text-align: right;
     padding-right: 16px;
-    width: 7%;
+    width: 14%;
     min-width: 40px;
 }
 
@@ -100,6 +100,7 @@ body{
     padding-right: 2px;
     min-width: 400px;
     text-transform: uppercase;
+    width: 100%;
 }
 
 .title {
@@ -119,7 +120,6 @@ body{
     padding-top: 50px;
     padding-left: 50px;
     padding-right: 50px;
-    padding-bottom: 10px;
     flex-direction: column;
 }
 
@@ -209,4 +209,25 @@ body{
 
 .showall div {
     margin: 10px;
+}
+
+.artistrow{
+    display: flex;
+}
+
+.footer {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    padding-bottom: 10px;
+}
+
+.footer a:link{
+    color: hsl(220, 63%, 64%);
+}
+
+.footer a:visited{
+    color: hsl(220, 63%, 64%);
 }
